Add Sebastian as author

--- a/RLumCarlo.BuildResults/RLumCarlo_0.1.0.6-bibliography.bib
+++ b/RLumCarlo.BuildResults/RLumCarlo_0.1.0.6-bibliography.bib
@@ -1,7 +1,7 @@
 @Manual{,
   title = {RLumCarlo: Monte-Carlo Methods for Simulating Luminescence Phenomena},
-  author = {Johannes Friedrich},
+  author = {Johannes Friedrich and Sebastian Kreutzer},
   year = {2019},
-  note = {R package version 0.1.0.5},
+  note = {R package version 0.1.0.6},
   url = {https://CRAN.R-project.org/package=RLumModel},
 }
