--- a/RLumCarlo.BuildResults/RLumCarlo_0.1.0.11-Functions.tex
+++ b/RLumCarlo.BuildResults/RLumCarlo_0.1.0.11-Functions.tex
@@ -1,5 +1,5 @@
 % latex table generated in R 3.5.2 by xtable 1.8-3 package
-% Sun Feb 24 20:52:19 2019
+% Sun Feb 24 21:55:39 2019
 \begin{table}[ht]
 \centering
 \begin{tabular}{rlllllll}
@@ -16,7 +16,9 @@
  &  & $<$br /$>$ Johannes Friedrich, University of Bayreuth (Germany)$<$br /$>$ \\ 
   5 & run\_MC\_LM\_OSL & Run Monte-Carlo simulation for LM-OSL & $<$br /$>$ Run Monte-Carlo simulation for LM-OSL$<$br /$>$ & 0.0.1 & [2017-01-27]
  &  & $<$br /$>$ Johannes Friedrich, University of Bayreuth (Germany)$<$br /$>$ \\ 
-  6 & run\_MC\_TL & Run Monte-Carlo simulation for TL & $<$br /$>$ Run Monte-Carlo simulation for TL$<$br /$>$ & 0.0.1 & [2017-01-27]
+  6 & run\_MC\_TL\_DELOC & Run Monte-Carlo simulation for TL for GOT model & $<$br /$>$ \#\#TODO$<$br /$>$ & 0.0.1
+ &  &  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, UMR 5060, CNRS - Université Bordeaux Montaigne (France)$<$br /$>$ \\ 
+  7 & run\_MC\_TL & Run Monte-Carlo simulation for TL & $<$br /$>$ Run Monte-Carlo simulation for TL$<$br /$>$ & 0.0.1 & [2017-01-27]
  &  & $<$br /$>$ Johannes Friedrich, University of Bayreuth (Germany)$<$br /$>$ \\ 
    \hline
 \end{tabular}
