Fix links and rebuild with R-devel

--- a/README.Rmd
+++ b/README.Rmd
@@ -19,7 +19,7 @@ library(RLumCarlo)
 
 The **R** package 'RLumCarlo' by Johannes Friedrich (University of Bayreuth, Germany) & Sebastian Kreutzer (IRAMAT-CRP2A, UMR 5060, CNRS - Université Bordeaux Montaigne, France) provides a collection of various R functions modelling luminescence signals in feldspar.
 
-[![Project Status: Concept](http://www.repostatus.org/badges/latest/concept.svg)](a href="https://www.repostatus.org/#concept">)
+[![Project Status: Concept](http://www.repostatus.org/badges/latest/concept.svg)](https://www.repostatus.org/#concept)
 [![CRAN](http://www.r-pkg.org/badges/version/RLumCarlo)](https://cran.r-project.org/package=RLumCarlo)
 [![Downloads](http://cranlogs.r-pkg.org/badges/grand-total/RLumCarlo)](http://www.r-pkg.org/pkg/RLumCarlo)
 
@@ -32,7 +32,7 @@ Depending on your OS please download and install one of the following:
 
 **Windows (32/64bit)** - 'Rtools' (provided by CRAN)
 
-   http://cran.r-project.org/bin/windows/Rtools/
+   https://cran.r-project.org/bin/windows/Rtools/
 
 **Mac OS X** - 'Xcode' (provided by Apple)
 
