Change function names TUN and rebuild

--- a/README.Rmd
+++ b/README.Rmd
@@ -58,7 +58,7 @@ of the wanted developer build (not available yet).
 ### Simulating CW-IRSL measurements
 
 ```{r}
-run_MC_CW_IRSL(A = 0.12, rho = 0.003, times = 0:1000) %>%
+run_MC_CW_IRSL_TUN(A = 0.12, rho = 0.003, times = 0:1000) %>%
      plot_RLumCarlo(norm = T, legend = T)
 ```
 
