--- a/RLumCarlo.BuildResults/RLumCarlo_0.1.0.9000-60-fun_bibliography.bib
+++ b/RLumCarlo.BuildResults/RLumCarlo_0.1.0.9000-60-fun_bibliography.bib
@@ -3,7 +3,7 @@
   title = {methods(): methods},
   volume = {version: 0.1.0},
   author = {Friedrich J and Kreutzer S},
-  booktitle = {Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2019. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence PhenomenaR package version 0.1.0.9000-55.},
+  booktitle = {Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2019. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence PhenomenaR package version 0.1.0.9000-60.},
   publisher = {RLumCarlo},
   year = {2019},
   url = {https://CRAN.R-project.org/package=RLumModel},
@@ -12,25 +12,25 @@
   title = {plot_RLumCarlo(): Plot results from Monte-Carlo simulations with RLumCarlo},
   volume = {version: 0.1.0},
   author = {Friedrich J and Kreutzer S},
-  booktitle = {Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2019. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence PhenomenaR package version 0.1.0.9000-55.},
+  booktitle = {Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2019. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence PhenomenaR package version 0.1.0.9000-60.},
   publisher = {RLumCarlo},
   year = {2019},
   url = {https://CRAN.R-project.org/package=RLumModel},
 }
 @InCollection{,
-  title = {run_MC_CW_IRSL_DELOC(): Run Monte-Carlo simulation for CW-IRSL for GOT model},
+  title = {run_MC_CW_IRSL_DELOC(): Run Monte-Carlo simulation for CW-IRSL for delocalized transition},
   volume = {version: 0.1.0},
   author = {Kreutzer S},
-  booktitle = {Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2019. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence PhenomenaR package version 0.1.0.9000-55.},
+  booktitle = {Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2019. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence PhenomenaR package version 0.1.0.9000-60.},
   publisher = {RLumCarlo},
   year = {2019},
   url = {https://CRAN.R-project.org/package=RLumModel},
 }
 @InCollection{,
   title = {run_MC_CW_IRSL_LOC(): Run Monte-Carlo simulation for CW-IRSL for localised transition},
-  volume = {version: 0.0.1},
+  volume = {version: 0.1.0},
   author = {Kreutzer S},
-  booktitle = {Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2019. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence PhenomenaR package version 0.1.0.9000-55.},
+  booktitle = {Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2019. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence PhenomenaR package version 0.1.0.9000-60.},
   publisher = {RLumCarlo},
   year = {2019},
   url = {https://CRAN.R-project.org/package=RLumModel},
@@ -39,16 +39,16 @@
   title = {run_MC_CW_IRSL_TUN(): Run Monte-Carlo simulation for CW-IRSL},
   volume = {version: 0.2.0},
   author = {Friedrich J and Kreutzer S},
-  booktitle = {Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2019. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence PhenomenaR package version 0.1.0.9000-55.},
+  booktitle = {Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2019. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence PhenomenaR package version 0.1.0.9000-60.},
   publisher = {RLumCarlo},
   year = {2019},
   url = {https://CRAN.R-project.org/package=RLumModel},
 }
 @InCollection{,
-  title = {run_MC_ISO_DELOC(): Run Monte-Carlo simulation for ISO for GOT model},
+  title = {run_MC_ISO_DELOC(): Run Monte-Carlo simulation for ISO for delocalized transition},
   volume = {version: 0.0.1},
   author = {Kreutzer S},
-  booktitle = {Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2019. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence PhenomenaR package version 0.1.0.9000-55.},
+  booktitle = {Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2019. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence PhenomenaR package version 0.1.0.9000-60.},
   publisher = {RLumCarlo},
   year = {2019},
   url = {https://CRAN.R-project.org/package=RLumModel},
@@ -57,7 +57,7 @@
   title = {run_MC_ISO_LOC(): Run Monte-Carlo simulation for ITL for localised transition},
   volume = {version: 0.0.1},
   author = {Kreutzer S},
-  booktitle = {Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2019. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence PhenomenaR package version 0.1.0.9000-55.},
+  booktitle = {Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2019. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence PhenomenaR package version 0.1.0.9000-60.},
   publisher = {RLumCarlo},
   year = {2019},
   url = {https://CRAN.R-project.org/package=RLumModel},
@@ -66,25 +66,25 @@
   title = {run_MC_ISO_TUN(): Run Monte-Carlo simulation for isothermal measurements},
   volume = {version: 0.1.0},
   author = {Friedrich J and Kreutzer S},
-  booktitle = {Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2019. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence PhenomenaR package version 0.1.0.9000-55.},
+  booktitle = {Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2019. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence PhenomenaR package version 0.1.0.9000-60.},
   publisher = {RLumCarlo},
   year = {2019},
   url = {https://CRAN.R-project.org/package=RLumModel},
 }
 @InCollection{,
-  title = {run_MC_LM_OSL_DELOC(): Run Monte-Carlo simulation for LM-OSL for GOT model},
+  title = {run_MC_LM_OSL_DELOC(): Run Monte-Carlo simulation for LM-OSL for delocalized transition},
   volume = {version: 0.1.0},
   author = {Kreutzer S},
-  booktitle = {Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2019. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence PhenomenaR package version 0.1.0.9000-55.},
+  booktitle = {Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2019. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence PhenomenaR package version 0.1.0.9000-60.},
   publisher = {RLumCarlo},
   year = {2019},
   url = {https://CRAN.R-project.org/package=RLumModel},
 }
 @InCollection{,
-  title = {run_MC_LM_OSL_LOC(): Run Monte-Carlo simulation for LM-OSL for localised transition},
+  title = {run_MC_LM_OSL_LOC(): Run Monte-Carlo simulation for LM-OSL for localized transition},
   volume = {version: 0.0.1},
   author = {Kreutzer S},
-  booktitle = {Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2019. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence PhenomenaR package version 0.1.0.9000-55.},
+  booktitle = {Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2019. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence PhenomenaR package version 0.1.0.9000-60.},
   publisher = {RLumCarlo},
   year = {2019},
   url = {https://CRAN.R-project.org/package=RLumModel},
@@ -93,16 +93,16 @@
   title = {run_MC_LM_OSL_TUN(): Run Monte-Carlo simulation for LM-OSL},
   volume = {version: 0.1.0},
   author = {Friedrich J},
-  booktitle = {Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2019. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence PhenomenaR package version 0.1.0.9000-55.},
+  booktitle = {Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2019. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence PhenomenaR package version 0.1.0.9000-60.},
   publisher = {RLumCarlo},
   year = {2019},
   url = {https://CRAN.R-project.org/package=RLumModel},
 }
 @InCollection{,
-  title = {run_MC_TL_DELOC(): Run Monte-Carlo simulation for TL for GOT model},
+  title = {run_MC_TL_DELOC(): Run Monte-Carlo simulation for TL for delocalized transition},
   volume = {version: 0.0.1},
   author = {Kreutzer S},
-  booktitle = {Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2019. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence PhenomenaR package version 0.1.0.9000-55.},
+  booktitle = {Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2019. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence PhenomenaR package version 0.1.0.9000-60.},
   publisher = {RLumCarlo},
   year = {2019},
   url = {https://CRAN.R-project.org/package=RLumModel},
@@ -111,7 +111,7 @@
   title = {run_MC_TL_LOC(): Run Monte-Carlo simulation for TL for localised transition},
   volume = {version: 0.1.0},
   author = {Kreutzer S},
-  booktitle = {Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2019. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence PhenomenaR package version 0.1.0.9000-55.},
+  booktitle = {Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2019. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence PhenomenaR package version 0.1.0.9000-60.},
   publisher = {RLumCarlo},
   year = {2019},
   url = {https://CRAN.R-project.org/package=RLumModel},
@@ -120,7 +120,7 @@
   title = {run_MC_TL_TUN(): Run Monte-Carlo simulation for TL},
   volume = {version: 0.1.0},
   author = {Friedrich J},
-  booktitle = {Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2019. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence PhenomenaR package version 0.1.0.9000-55.},
+  booktitle = {Friedrich, J., Kreutzer, S., Pagonis, V., Schmidt, C., 2019. RLumCarlo: Monte-Carlo Methods for Simulating Luminescence PhenomenaR package version 0.1.0.9000-60.},
   publisher = {RLumCarlo},
   year = {2019},
   url = {https://CRAN.R-project.org/package=RLumModel},
