--- a/README.Rmd
+++ b/README.Rmd
@@ -17,7 +17,7 @@ library(RLumCarlo)
 
 # RLumCarlo <img width=120px src="man/figures/Logo_RLumCarlo.png" align="right" />
 
-The **R** package 'RLumCarlo' by Johannes Friedrich (University of Bayreuth, Germany) & Sebastian Kreutzer (IRAMAT-CRP2A, UMR 5060, CNRS - Université Bordeaux Montaigne, France) provides a collection of various R functions modelling luminescence signals using Monte Carlo methods
+The **R** package 'RLumCarlo' provides a collection of various R functions modelling luminescence signals using Monte Carlo methods.
 
 [![Project Status: Concept](http://www.repostatus.org/badges/latest/concept.svg)](https://www.repostatus.org/#concept)
 [![CRAN](http://www.r-pkg.org/badges/version/RLumCarlo)](https://cran.r-project.org/package=RLumCarlo)
@@ -57,9 +57,9 @@ of the wanted developer build (not available yet).
 
 ### Simulating CW-IRSL measurements
 
-```{r}
+```{r, fig.align='center'}
 run_MC_CW_IRSL_TUN(A = 0.12, rho = 0.003, times = 0:1000) %>%
-     plot_RLumCarlo(norm = T, legend = T)
+     plot_RLumCarlo(norm = TRUE, legend = TRUE)
 ```
 
 ## Note
