--- a/vignettes/RLumCarlo_-_Getting_started_with_RLumCarlo.Rmd
+++ b/vignettes/RLumCarlo_-_Getting_started_with_RLumCarlo.Rmd
@@ -54,11 +54,15 @@ models <- regmatches(models, regexpr("(?<=run\\_).*", models, perl = TRUE), inve
 df <- data.frame(
   `MODEL NAME` = models, 
   `R CALL` = paste0("run_", models, "()"),
-  `R FILE` = paste0("R/run_", models, ".R"),
-  `MODE CORE` = paste0("src/MC_C_", models, ".cpp"))
+  `FILES` = paste0("R/run_", models, ".R \n src/MC_C_", models, ".cpp"), 
+  stringsAsFactors = FALSE)
 
-knitr::kable(df) %>% kable_styling(full_width = T, font_size = 5)
+knitr::kable(df, booktabs = TRUE, linesep = "\\addlinespace") %>% 
+  kable_styling(full_width = TRUE, font_size = 8) %>%
+  column_spec(1, bold = TRUE)
 ```
+
+
 
 
 # Figure 1
@@ -72,7 +76,7 @@ run_MC_ISO_TUN(E = 1.2,
            T = 200,
            rho = 0.007,
            times = times) %>%
-  plot_RLumCarlo(norm = T, legend = T)
+  plot_RLumCarlo(norm = TRUE, legend = TRUE)
 ```
 
 
@@ -91,97 +95,43 @@ run_MC_CW_IRSL_TUN(A = 0.21, rho = 0.003, times = times) %>%
 
 # Figure 3
 
-```{r Fig 3, fig.align='center'}
+```{r Fig 3, fig.align='center', cache = TRUE}
 s <- 3.5e12
 rho <- 0.015
 E <- 1.45
-
+r_c <- c(0,0.7,0.77,0.86, 0.97)
 times <- seq(100, 450) # time = temperature
-
-results_rc0 <- run_MC_TL_TUN(s=s, E = E, rho = rho, r_c = 0, times = times) 
-results_rc07 <- run_MC_TL_TUN(s=s, E = E, rho = rho, r_c = 0.7, times = times) 
-results_rc077 <- run_MC_TL_TUN(s=s, E = E, rho = rho, r_c = 0.77, times = times) 
-results_rc086 <- run_MC_TL_TUN(s=s, E = E, rho = rho, r_c = 0.86, times = times) 
-```
-
-```{r,Plot average signal, fig.align='center', echo = F}
-plot_RLumCarlo(
-  results = results_rc0, 
-  type = "b",
-  ylab = "normalized TL signal",
-  xlab = "Temperature [°C]", 
-  plot_uncertainty = FALSE,
-  col = "black",
-  norm = TRUE
-  
-)
-
-plot_RLumCarlo(
-  results_rc07,
-  norm = TRUE,
-  plot_uncertainty = FALSE,
-  add = TRUE,
-  col = "green",
-  type = "p",
-  pch = 6,
-  
-)
-
-
-plot_RLumCarlo(
-  results_rc077,
-  norm = TRUE,
-  plot_uncertainty = FALSE,
-  add = TRUE,
-  col = "blue",
-  type = "p",
-  pch = 4,
-  
-)
-
-plot_RLumCarlo(
-  results_rc086,
-  norm = TRUE,
-  plot_uncertainty = FALSE,
-  add = TRUE,
-  col = "red",
-  type = "p",
-  pch = 5,
-  
-)
-
-
-legend(
-  "topright",
-  bty = "n",
-  legend = c("0", "5", "10", "50"),
-  pch = c(1, 6, 5, 4),
-  col = c("black", "green", "blue", "red")
-)
-
-
-```
-
-# Figure 4
-
-```{r Fig 4, fig.align='center'}
-## set parameters
-s <- 3.5e12
-rho <- 0.015
-E <- 1.45
-times <- seq(200, 500) # time = temperature
-r_c <- c(0.85, 1.13, 1.3)
-
-for(i in 1:length(r_c)){
+results <- lapply(r_c, function(x) {
   run_MC_TL_TUN(
     s = s,
     E = E,
     rho = rho,
-    r_c = r_c[i],
+    r_c = x,
     times = times
-  ) %>%
-  plot_RLumCarlo(legend = T, add = TRUE, col = i + 1)
+  )
+  
+})
+```
 
-}
+```{r,Plot average signal, fig.align='center', echo = TRUE, cache = TRUE}
+plot_RLumCarlo(
+  object = results, 
+  ylab = "normalized TL signal",
+  xlab = "Temperature [°C]", 
+  plot_uncertainty = "range",
+  legend = FALSE,
+  col = c("black", "green", "blue", "red"),
+  norm = TRUE
+  
+)
+
+legend(
+  "topright",
+  bty = "n",
+  legend = paste0("r_c: ", r_c),
+  lty = 1,
+  col = c("black", "green", "blue", "red")
+)
+
 
 ```
