--- a/vignettes/RLumCarlo_-_Getting_started_with_RLumCarlo.Rmd
+++ b/vignettes/RLumCarlo_-_Getting_started_with_RLumCarlo.Rmd
@@ -38,8 +38,8 @@ RLumCarlo is collection of energy-band models to simulate luminescence signals u
 
 # The models in RLumCarlo
 
-The following tables lists the models implemented in RLumCarlo along with the R function call 
-and the corresponding R and C++ files. The modelling takes place in the C++ functions which 
+The following tables lists the models implemented in RLumCarlo along with the **R** function call 
+and the corresponding R (\*.R) and C++ (\*.cpp) files. The modelling takes place in the C++ functions which 
 are wrapped by the R functions with a similar name. If you, however, want to cross-check the 
 code, you should inspect files with the ending '.cpp'. 
 
@@ -70,7 +70,11 @@ Please note that each model has different parameters and requirements.
 
 ## Example 1: A first example
 
-The first examples simulates an iso-thermal curve using the tunneling model. 
+The first examples simulates an iso-thermal curve using the tunneling model. Returned are either
+the simulated signal or the estimated remaining charges. The Function `plot_RLumCarlo()` provides
+an easy way to visualise the modelling results. 
+
+### Modell the signal  
 ```{r Fig 1, fig.align='center', cache=TRUE}
 results <- run_MC_ISO_TUN(
   E = 1.2,
@@ -82,6 +86,23 @@ results <- run_MC_ISO_TUN(
   plot_RLumCarlo(norm = TRUE, legend = TRUE)
 ```
 
+### Modell remaining charges
+```{r Fig 2, fig.align='center', cache=TRUE}
+results <- run_MC_ISO_TUN(
+  E = 1.2,
+  s = 1e10,
+  T = 200,
+  rho = 0.007,
+  times = seq(0, 5000), 
+  output = "remaining_e"
+) %T>%
+  plot_RLumCarlo(
+    legend = TRUE,
+    ylab = "Remaining electrons"
+    )
+```
+
+### Understanding the numerical output
 The modelling output is an object of class `RLumCarlo_Model_Output`, which is basically 
 a list consisting of an array and a vector. 
 
@@ -89,7 +110,7 @@ a list consisting of an array and a vector.
 str(results)
 ```
 
-While this represents the full modelling output results, the interpretation might be less 
+While this represents the full modelling output results, its interpretation might be less 
 straight forward and the user may want to condense the information via `summary()`. 
 The function `summary()` is also used internally by the function `plot_RLumCarlo()`.
 
@@ -101,8 +122,8 @@ head(df)
 The call summarises the modelling results and returns a terminal output and a `data.frame` with, 
 e.g., the mean or the standard deviation, which can be used to create plots for further insight. 
 For instance, the stimulation time agains the relative standard deviation: 
-
-```{r, fig.align="center"}
+ 
+```{r Fig 3, fig.align="center"}
 plot(
   x = df$time,
   y = (df$sd / df$mean) * 100,
@@ -118,7 +139,7 @@ plot(
 The following example uses continuous wave (CW) infrared light stimulation (IRSL), and combines
 two plots in one single plot window.
 
-```{r Fig 2, fig.align='center'}
+```{r Fig 4, fig.align='center'}
 times <- seq(0, 1000)
 
 ## Run MC simulation
@@ -129,13 +150,13 @@ run_MC_CW_IRSL_TUN(A = 0.21, rho = 0.003, times = times) %>%
   plot_RLumCarlo(norm = TRUE, add = TRUE)
 ```
 
-## Example 3: Testing parameters
+## Example 3: Testing different parameters
 
 The example above can be further extended to test the effect of different parameters. 
 Contrary to the example above, here the results are stored in a `list` and `plot_RLumCarlo()` 
 is called only one time. 
 
-```{r Fig 3, fig.align='center', cache = TRUE}
+```{r Fig 5, fig.align='center', cache = TRUE}
 s <- 3.5e12
 rho <- 0.015
 E <- 1.45
@@ -153,7 +174,7 @@ results <- lapply(r_c, function(x) {
 })
 ```
 
-```{r,Plot average signal, fig.align='center', echo = FALSE, cache = TRUE}
+```{r Fig 6,Plot average signal, fig.align='center', echo = FALSE, cache = TRUE}
 plot_RLumCarlo(
   object = results, 
   ylab = "normalized TL signal",
