--- a/README.Rmd
+++ b/README.Rmd
@@ -42,9 +42,7 @@ Depending on your OS please download and install one of the following:
 
 For **Linux** users *gcc* often comes pre-installed in most distributions. Should *gcc* be not available, however, we kindly refer to the exhaustive collection of installation guides depending on the linux distribution.
 
-#### ii. Install the package
-
-To install the latest development builds directly from GitHub, run
+#### ii. Install the package from GitHub
 
 ```r
 if(!require("devtools"))
@@ -52,12 +50,7 @@ if(!require("devtools"))
 devtools::install_github("R-Lum/RLumCarlo@master")
 ```
 
-To install a developer build other than 'master', replace the term 'master' in the codeline by the name
-of the wanted developer build (not available yet). 
-
 ## Examples
-
-### Simulating CW-IRSL measurements
 
 ```{r, fig.align='center'}
 run_MC_CW_IRSL_TUN(A = 0.12, rho = 0.003, times = 0:1000) %>%
