--- a/README.Rmd
+++ b/README.Rmd
@@ -26,6 +26,28 @@ The **R** package 'RLumCarlo' provides a collection of various R functions model
 [![codecov](https://codecov.io/gh/R-Lum/RLumCarlo/branch/master/graph/badge.svg?token=W0q5JUInf7)](https://codecov.io/gh/R-Lum/RLumCarlo)
 
 
+## TODOs before CRAN submission
+
+### Check documentation
+
+* RLumCarlo-package.R
+* methods.R
+* plot_RLumCarlo.R
+* run_MC_CW_IRSL_LOC.R
+* run_MC_CW_IRSL_TUN.R
+* run_MC_CW_OSL_DELOC.R
+* run_MC_ISO_DELOC.R
+* run_MC_ISO_LOC.R
+* run_MC_ISO_TUN.R
+* run_MC_LM_OSL_DELOC.R
+* run_MC_LM_OSL_LOC.R
+* run_MC_LM_OSL_TUN.R
+* run_MC_TL_DELOC.R
+* run_MC_TL_LOC.R
+* run_MC_TL_TUN.R
+* utils.R
+
+
 ## Installation
 
 #### i. Requirements
