--- a/README.Rmd
+++ b/README.Rmd
@@ -32,7 +32,7 @@ The **R** package 'RLumCarlo' provides a collection of various R functions model
 
 * ~~RLumCarlo-package.R~~
 * ~~methods.R~~
-* plot_RLumCarlo.R
+* ~~plot_RLumCarlo.R~~
 * run_MC_CW_IRSL_LOC.R
 * run_MC_CW_IRSL_TUN.R
 * run_MC_CW_OSL_DELOC.R
