--- a/README.Rmd
+++ b/README.Rmd
@@ -33,6 +33,7 @@ The **R** package 'RLumCarlo' provides a collection of various R functions model
 * ~~RLumCarlo-package.R~~
 * ~~methods.R~~
 * ~~plot_RLumCarlo.R~~
+* ~~utils.R~~
 * run_MC_CW_IRSL_LOC.R
 * run_MC_CW_IRSL_TUN.R
 * run_MC_CW_OSL_DELOC.R
@@ -45,7 +46,6 @@ The **R** package 'RLumCarlo' provides a collection of various R functions model
 * run_MC_TL_DELOC.R
 * run_MC_TL_LOC.R
 * run_MC_TL_TUN.R
-* utils.R
 
 * Documentation checked by Christoph? 
 * Documentation verified by Vasilis?
