--- a/README.Rmd
+++ b/README.Rmd
@@ -34,8 +34,8 @@ The **R** package 'RLumCarlo' provides a collection of various R functions model
 * ~~methods.R~~
 * ~~plot_RLumCarlo.R~~
 * ~~utils.R~~
-* run_MC_CW_IRSL_LOC.R
-* run_MC_CW_IRSL_TUN.R
+* ~~run_MC_CW_IRSL_LOC.R~~
+* ~~run_MC_CW_IRSL_TUN.R~~
 * run_MC_CW_OSL_DELOC.R
 * run_MC_ISO_DELOC.R
 * run_MC_ISO_LOC.R
