Check run_MC_ISO_TUN.R

--- a/README.Rmd
+++ b/README.Rmd
@@ -39,7 +39,7 @@ The **R** package 'RLumCarlo' provides a collection of various R functions model
 * ~~run_MC_CW_OSL_DELOC.R~~
 * ~~run_MC_ISO_DELOC.R~~
 * ~~run_MC_ISO_LOC.R~~
-* run_MC_ISO_TUN.R
+* ~~run_MC_ISO_TUN.R~~
 * run_MC_LM_OSL_DELOC.R
 * run_MC_LM_OSL_LOC.R
 * run_MC_LM_OSL_TUN.R
