--- a/README.Rmd
+++ b/README.Rmd
@@ -40,8 +40,8 @@ The **R** package 'RLumCarlo' provides a collection of various R functions model
 * ~~run_MC_ISO_DELOC.R~~
 * ~~run_MC_ISO_LOC.R~~
 * ~~run_MC_ISO_TUN.R~~
-* run_MC_LM_OSL_DELOC.R
-* run_MC_LM_OSL_LOC.R
+* ~~run_MC_LM_OSL_DELOC.R~~
+* ~~run_MC_LM_OSL_LOC.R~~
 * run_MC_LM_OSL_TUN.R
 * run_MC_TL_DELOC.R
 * run_MC_TL_LOC.R
